@@ -40,29 +40,29 @@
 <!-- ###CHECKOPTIONS_SECTION### end -->
 <!-- ###BROKENLINKS_CONTENT### begin -->
         ###LIST_HEADER###
-        <table id="brokenLinksList" border="0" width="100%" cellspacing="1" cellpadding="3" align="center" bgcolor="###BGCOLOR2###">
-            <tr>
-                <td class="head" align="center"></td>
-                <td class="head" align="center"><b>###TABLEHEAD_PATH###</b></td>
-                <td class="head" align="center"><b>###TABLEHEAD_TYPE###</b></td>
-                <td class="head" align="center"><b>###TABLEHEAD_HEADLINE###</b></td>
-                <td class="head" align="center"><b>###TABLEHEAD_FIELD###</b></td>
-                <td class="head" align="center"><b>###TABLEHEAD_HEADLINK###</b></td>
-                <td class="head" align="center"><b>###TABLEHEAD_LINKTARGET###</b></td>
-                <td class="head" align="center"><b>###TABLEHEAD_LINKMESSAGE###</b></td>
-                <td class="head" align="center"><b>###TABLEHEAD_LASTCHECK###</b></td>
+        <table class="typo3-dblist" cellspacing="1" cellpadding="0">
+            <tr class="t3-row-header">
+                <td></td>
+                <td>###TABLEHEAD_PATH###</td>
+                <td>###TABLEHEAD_TYPE###</td>
+                <td>###TABLEHEAD_HEADLINE###</td>
+                <td>###TABLEHEAD_FIELD###</td>
+                <td>###TABLEHEAD_HEADLINK###</td>
+                <td>###TABLEHEAD_LINKTARGET###</td>
+                <td>###TABLEHEAD_LINKMESSAGE###</td>
+                <td>###TABLEHEAD_LASTCHECK###</td>
             </tr>
             <!-- ###BROKENLINKS_ITEM### begin -->
-            <tr bgcolor="###BGCOLOR_ALTERNATING###">
-                <td class="content">###ACTIONLINK###</td>
-                <td class="content">###PATH###</td>
-                <td class="content" style="text-align: center">###TYPE###</td>
-                <td class="content">###HEADLINE###</td>
-                <td class="content">###FIELD###</td>
-                <td class="content">###HEADLINK###</td>
-                <td class="content"><a href="###LINKTARGET###" target="_blank">###LINKTARGET###</a></td>
-                <td class="content">###LINKMESSAGE###</td>
-                <td class="content">###LASTCHECK###</td>
+            <tr class="db_list_normal">
+                <td>###ACTIONLINK###</td>
+                <td>###PATH###</td>
+                <td>###TYPE###</td>
+                <td>###HEADLINE###</td>
+                <td>###FIELD###</td>
+                <td>###HEADLINK###</td>
+                <td><a href="###LINKTARGET###" target="_blank">###LINKTARGET###</a></td>
+                <td>###LINKMESSAGE###</td>
+                <td>###LASTCHECK###</td>
             </tr>
             <!-- ###BROKENLINKS_ITEM### end -->
             </table>
