@@ -1,6 +1,7 @@
 2010-12-30  Christopher  <chrissitopher@gmx.de>
 
 	* Fixed bug #11779: Unify usage of tooltips in table rows
+	* Fixed bug #11775: Table should use new design for TYPO3 4.5
 
 2010-12-28  Pierre Boivin <pierre.boivin@infoglobe.ca>
 
